# image-processing-app

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  main.cpp  vcpkg.json
benchmark/: CMakeLists.txt  ComponentBenchmarks.cpp
src/: CMakeLists.txt
src/components/: CMakeLists.txt
src/components/denoising/: CMakeLists.txt  DenoisingComponent.cpp  DenoisingComponent.h  DenoisingParameters.h
src/components/denoising/gaussian-blur/: CMakeLists.txt  GaussianBlurComponent.cpp  GaussianBlurComponent.h  GaussianBlurParameters.h
src/components/denoising/gaussian-blur/cpu/: CMakeLists.txt  GaussianBlurCPU.cpp  GaussianBlurCPU.h
src/components/denoising/gaussian-blur/gpu/: CMakeLists.txt  GaussianBlurGPU.cpp  GaussianBlurGPU.h
src/components/denoising/tv-denoising/: CMakeLists.txt  TVDenoisingComponent.cpp  TVDenoisingComponent.h  TVDenoisingParameters.h
src/components/denoising/tv-denoising/cpu/: CMakeLists.txt  TVDenoisingCPU.cpp  TVDenoisingCPU.h
src/components/denoising/tv-denoising/gpu/: CMakeLists.txt  TVDenoisingGPU.cpp  TVDenoisingGPU.h
src/components/edge-detection/: CMakeLists.txt  EdgeDetectionComponent.cpp  EdgeDetectionComponent.h
src/components/edge-detection/canny/: CMakeLists.txt  CannyEdgeDetectionComponent.cpp  CannyEdgeDetectionComponent.h  CannyEdgeDetectionParameters.h
src/components/edge-detection/canny/cpu/: CMakeLists.txt  CannyEdgeDetectionCPU.cpp  CannyEdgeDetectionCPU.h
src/components/edge-detection/canny/gpu/: CMakeLists.txt  CannyEdgeDetectionGPU.cpp  CannyEdgeDetectionGPU.h
src/components/edge-detection/sobel/: CMakeLists.txt  SobelEdgeDetectionComponent.cpp  SobelEdgeDetectionComponent.h  SobelEdgeDetectionParameters.h
src/components/edge-detection/sobel/cpu/: CMakeLists.txt  SobelEdgeDetectionCPU.cpp  SobelEdgeDetectionCPU.h
src/components/edge-detection/sobel/gpu/: CMakeLists.txt  SobelEdgeDetectionGPU.cpp  SobelEdgeDetectionGPU.h
src/components/shape-detection/: CMakeLists.txt  ShapeDetectionComponent.cpp  ShapeDetectionComponent.h
src/components/shape-detection/hough-circle/: CMakeLists.txt  HoughCircle.h  HoughCircleShapeDetectionComponent.cpp  HoughCircleShapeDetectionComponent.h  HoughCircleShapeDetectionParameters.h
src/components/shape-detection/hough-circle/cpu/: CMakeLists.txt  HoughCircleShapeDetectionCPU.cpp  HoughCircleShapeDetectionCPU.h
src/components/shape-detection/hough-circle/gpu/: CMakeLists.txt  HoughCircleShapeDetectionGPU.cpp  HoughCircleShapeDetectionGPU.h
src/components/shape-detection/hough-line/: CMakeLists.txt  HoughLine.h  HoughLineShapeDetectionComponent.cpp  HoughLineShapeDetectionComponent.h  HoughLineShapeDetectionParameters.h
src/components/shape-detection/hough-line/cpu/: CMakeLists.txt  HoughLineShapeDetectionCPU.cpp  HoughLineShapeDetectionCPU.h
src/components/shape-detection/hough-line/gpu/: CMakeLists.txt  HoughLineShapeDetectionGPU.cpp  HoughLineShapeDetectionGPU.h
src/config/: CMakeLists.txt  config.h
src/config/components/: denoising-config.h  edge-detection-config.h  shape-detection-config.h
src/core/: CMakeLists.txt  Component.cpp  Component.h  Context.h  GPUComponent.cpp  GPUComponent.h  HoughLine.h  ParameterizedComponent.h  Parameters.h
src/kernels/: utils.cl
src/kernels/denoising/: GaussianBlur.cl  TVDenoising.cl
src/kernels/edge-detection/: CannyEdgeDetection.cl  SobelEdgeDetection.cl
src/kernels/shape-detection/: HoughCircleShapeDetection.cl  HoughLineShapeDetection.cl
src/pipeline/: CMakeLists.txt  Pipeline.cpp  Pipeline.h
src/pipeline/merge/: CMakeLists.txt  CombineEdgeMap.h  CombineShapeMap.h  MergeStrategy.h
src/utils/: CMakeLists.txt  Color.cpp  Color.h  Image.cpp  Image.h  ocl-sum-utils.h  oclutils.h  types.h
tests/: CMakeLists.txt
tests/components/: CMakeLists.txt  ComponentRegressionTests.cpp
tests/pipeline/: CMakeLists.txt  MockComponents.h  PipelineTests.cpp
ui/: CMakeLists.txt
ui/cli/: CMakeLists.txt  ComponentRegistry.h  NodeFactory.h  NodeTypes.h  ParameterPrompter.cpp  ParameterPrompter.h  ParameterValidator.h  PipelineController.cpp  PipelineController.h  PipelineUI.h  Terminal.cpp  Terminal.h
ui/model/: CMakeLists.txt  ComponentRegistry.h  NodeTypes.h  ParameterValidator.h  PipelineModel.cpp  PipelineModel.h
